Update the Background and update the contain

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     </head>
 <body>
    <h1 class="fancy">Fun with Machine Learning</h1>
-   <p>This project is to show how Machine Learning is so much fun to learn and intresting to know.<br> In this project I wanna show some cool web interaction where you can see how its work.</p>
+   <div class="contain">
+       <p>Machine learning is an application of artificial intelligence (AI) that provides systems the ability to automatically learn and improve from experience without being explicitly programmed. Machine learning focuses on the development of computer programs that can access data and use it learn for themselves.</p>
+       <p>The process of learning begins with observations or data, such as examples, direct experience, or instruction, in order to look for patterns in data and make better decisions in the future based on the examples that we provide. The primary aim is to allow the computers learn automatically without human intervention or assistance and adjust actions accordingly.</p>
+       <div class="btn"><a href="#">Read More</a></div>
+   </div>
+   
+    <div id="stars"></div>
+   <div id="stars2"></div>
+   <div id="stars3"></div>
    <div class="wrapper">
     <div class="container">
        <div class="card">
@@ -23,7 +31,7 @@
            </div>
            <div class="face face2">
                <div class="content">
-                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex tempora corrupti vero, ea! Itaque id totam minima aspernatur harum ipsa!</p>
+                   <p>Image which is the primary key to the Computer Vision, we get lots of lots images in seconds. This days the world is full of images data, and over here I wanna show some basic of Computer Vision task.. </p>
                    <a href="https://cs231n.github.io/classification/">Read More</a>
                </div>
            </div>
@@ -37,7 +45,7 @@
            </div>
            <div class="face face2">
                <div class="content">
-                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex tempora corrupti vero, ea! Itaque id totam minima aspernatur harum ipsa!</p>
+                   <p>Sound is the one of the source of Data. The voice recognition task and the pitch detection are the some of the Machine Learning task on Sound Data..</p>
                    <a href="#">Read More</a>
                </div>
            </div>
@@ -51,7 +59,7 @@
            </div>
            <div class="face face2">
                <div class="content">
-                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex tempora corrupti vero, ea! Itaque id totam minima aspernatur harum ipsa!</p>
+                   <p>Text one of the most important for human language. This day we are using text data for script generating and used in Natural Language Processing(NLP). Google Assistant and Siri are the example of this field. </p>
                    <a href="#">Read More</a>
                </div>
            </div>
@@ -61,7 +69,6 @@
      <div class="footer">
        <div class="container">
        </div>
-       <div class="footer-text-up">follow me </div>
        <div>
            <a class="social-icon-link w-inline-block" href="https://www.facebook.com/yeshi.dorjee.921">
            <img src="https://img.icons8.com/color/48/000000/facebook.png" ></a>
