Update the computer Vision card

--- a/computer_vision/image.html
+++ b/computer_vision/image.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>FWMLearning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/image.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lykmapipo/themify-icons@0.1.2/css/themify-icons.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
@@ -12,60 +12,38 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
 <body>
+   <div class="home-btn"><a href="../index.html">Home</a></div>
 
-   <h1 class="fancy">Fun with Machine Learning</h1>
+   <h1 class="fancy">Computer Vision</h1>
    <div class="contain">
        <p>Machine learning is an application of artificial intelligence (AI) that provides systems the ability to automatically learn and improve from experience without being explicitly programmed. Machine learning focuses on the development of computer programs that can access data and use it learn for themselves.</p>
        <p>The process of learning begins with observations or data, such as examples, direct experience, or instruction, in order to look for patterns in data and make better decisions in the future based on the examples that we provide. The primary aim is to allow the computers learn automatically without human intervention or assistance and adjust actions accordingly.</p>
        <div class="btn"><a href="#">Read More</a></div>
    </div>
    
-    <div id="stars"></div>
-   <div id="stars2"></div>
-   <div id="stars3"></div>
    <div class="wrapper">
     <div class="container">
-       <div class="card">
-           <div class="face face1">
-               <div class="content">
-                   <h3><a href="computer_vision/image.html">Image</a></h3>
-               </div>
+       <div class="service">
+            <div class="card">
+           <div class="card-image card-1">
            </div>
-           <div class="face face2">
-               <div class="content">
-                   <p>Image which is the primary key to the Computer Vision, we get lots of lots images in seconds. This days the world is full of images data, and over here I wanna show some basic of Computer Vision task.. </p>
-                   <a href="https://cs231n.github.io/classification/">Read More</a>
-               </div>
+           <div class="card-text card-1">
+               <h2>Image Classifier</h2>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse laudantium harum magnam accusantium blanditiis, tenetur repudiandae consequatur quam itaque debitis!</p>
            </div>
        </div>
+       </div><!-- / service -->
        
-       <div class="card">
-           <div class="face face1">
-               <div class="content">
-                   <h3><a href="Sound/index.html">Sound</a></h3>
-               </div>
+       <div class="service">
+            <div class="card">
+           <div class="card-image card-2">
            </div>
-           <div class="face face2">
-               <div class="content">
-                   <p>Sound is the one of the source of Data. The voice recognition task and the pitch detection are the some of the Machine Learning task on Sound Data..</p>
-                   <a href="#">Read More</a>
-               </div>
+           <div class="card-text card-2">
+               <h2>Pose Net</h2>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse laudantium harum magnam accusantium blanditiis, tenetur repudiandae consequatur quam itaque debitis!</p>
            </div>
        </div>
-        
-        <div class="card">
-           <div class="face face1">
-               <div class="content">
-                   <h3><a href="Text/index.html">Text</a></h3>
-               </div>
-           </div>
-           <div class="face face2">
-               <div class="content">
-                   <p>Text one of the most important for human language. This day we are using text data for script generating and used in Natural Language Processing(NLP). Google Assistant and Siri are the example of this field. </p>
-                   <a href="#">Read More</a>
-               </div>
-           </div>
-       </div>
+       </div><!-- / service -->
        </div>
     </div>
      <div class="footer">
