--- a/Sound/sounds.html
+++ b/Sound/sounds.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FWMLearning</title>
+    <title>FWSound</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/image.css">
+    <link rel="stylesheet" href="style/sounds.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lykmapipo/themify-icons@0.1.2/css/themify-icons.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
@@ -51,13 +51,14 @@
           <span class="link-text">Home</span>
         </a>
       </li>
-
-      <li class="nav-item">
-        <a href="Sound/sounds.html" class="nav-link menu-item">
-          <svg xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-soundcloud fa-w-20" role="img" aria-hidden="true" viewBox="0 0 640 512" focusable="false" data-icon="soundcloud" data-prefix="fab"><path fill="currentColor" d="M 111.4 256.3 l 5.8 65 l -5.8 68.3 c -0.3 2.5 -2.2 4.4 -4.4 4.4 s -4.2 -1.9 -4.2 -4.4 l -5.6 -68.3 l 5.6 -65 c 0 -2.2 1.9 -4.2 4.2 -4.2 c 2.2 0 4.1 2 4.4 4.2 Z m 21.4 -45.6 c -2.8 0 -4.7 2.2 -5 5 l -5 105.6 l 5 68.3 c 0.3 2.8 2.2 5 5 5 c 2.5 0 4.7 -2.2 4.7 -5 l 5.8 -68.3 l -5.8 -105.6 c 0 -2.8 -2.2 -5 -4.7 -5 Z m 25.5 -24.1 c -3.1 0 -5.3 2.2 -5.6 5.3 l -4.4 130 l 4.4 67.8 c 0.3 3.1 2.5 5.3 5.6 5.3 c 2.8 0 5.3 -2.2 5.3 -5.3 l 5.3 -67.8 l -5.3 -130 c 0 -3.1 -2.5 -5.3 -5.3 -5.3 Z M 7.2 283.2 c -1.4 0 -2.2 1.1 -2.5 2.5 L 0 321.3 l 4.7 35 c 0.3 1.4 1.1 2.5 2.5 2.5 s 2.2 -1.1 2.5 -2.5 l 5.6 -35 l -5.6 -35.6 c -0.3 -1.4 -1.1 -2.5 -2.5 -2.5 Z m 23.6 -21.9 c -1.4 0 -2.5 1.1 -2.5 2.5 l -6.4 57.5 l 6.4 56.1 c 0 1.7 1.1 2.8 2.5 2.8 s 2.5 -1.1 2.8 -2.5 l 7.2 -56.4 l -7.2 -57.5 c -0.3 -1.4 -1.4 -2.5 -2.8 -2.5 Z m 25.3 -11.4 c -1.7 0 -3.1 1.4 -3.3 3.3 L 47 321.3 l 5.8 65.8 c 0.3 1.7 1.7 3.1 3.3 3.1 c 1.7 0 3.1 -1.4 3.1 -3.1 l 6.9 -65.8 l -6.9 -68.1 c 0 -1.9 -1.4 -3.3 -3.1 -3.3 Z m 25.3 -2.2 c -1.9 0 -3.6 1.4 -3.6 3.6 l -5.8 70 l 5.8 67.8 c 0 2.2 1.7 3.6 3.6 3.6 s 3.6 -1.4 3.9 -3.6 l 6.4 -67.8 l -6.4 -70 c -0.3 -2.2 -2 -3.6 -3.9 -3.6 Z m 241.4 -110.9 c -1.1 -0.8 -2.8 -1.4 -4.2 -1.4 c -2.2 0 -4.2 0.8 -5.6 1.9 c -1.9 1.7 -3.1 4.2 -3.3 6.7 v 0.8 l -3.3 176.7 l 1.7 32.5 l 1.7 31.7 c 0.3 4.7 4.2 8.6 8.9 8.6 s 8.6 -3.9 8.6 -8.6 l 3.9 -64.2 l -3.9 -177.5 c -0.4 -3 -2 -5.8 -4.5 -7.2 Z m -26.7 15.3 c -1.4 -0.8 -2.8 -1.4 -4.4 -1.4 s -3.1 0.6 -4.4 1.4 c -2.2 1.4 -3.6 3.9 -3.6 6.7 l -0.3 1.7 l -2.8 160.8 s 0 0.3 3.1 65.6 v 0.3 c 0 1.7 0.6 3.3 1.7 4.7 c 1.7 1.9 3.9 3.1 6.4 3.1 c 2.2 0 4.2 -1.1 5.6 -2.5 c 1.7 -1.4 2.5 -3.3 2.5 -5.6 l 0.3 -6.7 l 3.1 -58.6 l -3.3 -162.8 c -0.3 -2.8 -1.7 -5.3 -3.9 -6.7 Z m -111.4 22.5 c -3.1 0 -5.8 2.8 -5.8 6.1 l -4.4 140.6 l 4.4 67.2 c 0.3 3.3 2.8 5.8 5.8 5.8 c 3.3 0 5.8 -2.5 6.1 -5.8 l 5 -67.2 l -5 -140.6 c -0.2 -3.3 -2.7 -6.1 -6.1 -6.1 Z m 376.7 62.8 c -10.8 0 -21.1 2.2 -30.6 6.1 c -6.4 -70.8 -65.8 -126.4 -138.3 -126.4 c -17.8 0 -35 3.3 -50.3 9.4 c -6.1 2.2 -7.8 4.4 -7.8 9.2 v 249.7 c 0 5 3.9 8.6 8.6 9.2 h 218.3 c 43.3 0 78.6 -35 78.6 -78.3 c 0.1 -43.6 -35.2 -78.9 -78.5 -78.9 Z m -296.7 -60.3 c -4.2 0 -7.5 3.3 -7.8 7.8 l -3.3 136.7 l 3.3 65.6 c 0.3 4.2 3.6 7.5 7.8 7.5 c 4.2 0 7.5 -3.3 7.5 -7.5 l 3.9 -65.6 l -3.9 -136.7 c -0.3 -4.5 -3.3 -7.8 -7.5 -7.8 Z m -53.6 -7.8 c -3.3 0 -6.4 3.1 -6.4 6.7 l -3.9 145.3 l 3.9 66.9 c 0.3 3.6 3.1 6.4 6.4 6.4 c 3.6 0 6.4 -2.8 6.7 -6.4 l 4.4 -66.9 l -4.4 -145.3 c -0.3 -3.6 -3.1 -6.7 -6.7 -6.7 Z m 26.7 3.4 c -3.9 0 -6.9 3.1 -6.9 6.9 L 227 321.3 l 3.9 66.4 c 0.3 3.9 3.1 6.9 6.9 6.9 s 6.9 -3.1 6.9 -6.9 l 4.2 -66.4 l -4.2 -141.7 c 0 -3.9 -3 -6.9 -6.9 -6.9 Z" /></svg>
-          <span class="link-text">Sound</span>
+       
+       <li class="nav-item">
+        <a href="computer_vision/image.html" class="nav-link menu-item">
+         <svg xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-images fa-w-18" role="img" aria-hidden="true" viewBox="0 0 576 512" focusable="false" data-icon="images" data-prefix="fas"><path fill="currentColor" d="M 480 416 v 16 c 0 26.51 -21.49 48 -48 48 H 48 c -26.51 0 -48 -21.49 -48 -48 V 176 c 0 -26.51 21.49 -48 48 -48 h 16 v 208 c 0 44.112 35.888 80 80 80 h 336 Z m 96 -80 V 80 c 0 -26.51 -21.49 -48 -48 -48 H 144 c -26.51 0 -48 21.49 -48 48 v 256 c 0 26.51 21.49 48 48 48 h 384 c 26.51 0 48 -21.49 48 -48 Z M 256 128 c 0 26.51 -21.49 48 -48 48 s -48 -21.49 -48 -48 s 21.49 -48 48 -48 s 48 21.49 48 48 Z m -96 144 l 55.515 -55.515 c 4.686 -4.686 12.284 -4.686 16.971 0 L 272 256 l 135.515 -135.515 c 4.686 -4.686 12.284 -4.686 16.971 0 L 512 208 v 112 H 160 v -48 Z" /></svg>
+          <span class="link-text">Image</span>
         </a>
       </li>
+
        <li class="nav-item">
         <a href="Text/text.html" class="nav-link menu-item">
           <svg xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-font fa-w-14" role="img" aria-hidden="true" viewBox="0 0 448 512" focusable="false" data-icon="font" data-prefix="fas"><path fill="currentColor" d="M 432 416 h -23.41 L 277.88 53.69 A 32 32 0 0 0 247.58 32 h -47.16 a 32 32 0 0 0 -30.3 21.69 L 39.41 416 H 16 a 16 16 0 0 0 -16 16 v 32 a 16 16 0 0 0 16 16 h 128 a 16 16 0 0 0 16 -16 v -32 a 16 16 0 0 0 -16 -16 h -19.58 l 23.3 -64 h 152.56 l 23.3 64 H 304 a 16 16 0 0 0 -16 16 v 32 a 16 16 0 0 0 16 16 h 128 a 16 16 0 0 0 16 -16 v -32 a 16 16 0 0 0 -16 -16 Z M 176.85 272 L 224 142.51 L 271.15 272 Z" /></svg>
@@ -75,7 +76,7 @@
     </ul>
   </nav>
 
-   <h1 class="fancy">Computer Vision</h1>
+   <h1 class="fancy">Sound</h1>
    <div class="contain">
        <p>Machine learning is an application of artificial intelligence (AI) that provides systems the ability to automatically learn and improve from experience without being explicitly programmed. Machine learning focuses on the development of computer programs that can access data and use it learn for themselves.</p>
        <p>The process of learning begins with observations or data, such as examples, direct experience, or instruction, in order to look for patterns in data and make better decisions in the future based on the examples that we provide. The primary aim is to allow the computers learn automatically without human intervention or assistance and adjust actions accordingly.</p>
@@ -89,7 +90,7 @@
            <div class="card-image card-1">
            </div>
            <div class="card-text card-1">
-               <h2>Image Classifier</h2>
+               <h2>Sound Classifier</h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse laudantium harum magnam accusantium blanditiis, tenetur repudiandae consequatur quam itaque debitis!</p>
            </div>
        </div>
@@ -100,7 +101,7 @@
            <div class="card-image card-2">
            </div>
            <div class="card-text card-2">
-               <h2>Pose Net</h2>
+               <h2>Pitch Detection</h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse laudantium harum magnam accusantium blanditiis, tenetur repudiandae consequatur quam itaque debitis!</p>
            </div>
        </div>
