--- a/Text/text.html
+++ b/Text/text.html
@@ -12,7 +12,68 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
 <body>
-   <div class="home-btn"><a href="../index.html">Home</a></div>
+   <nav class="navbar">
+    <ul class="navbar-nav">
+      <li class="logo">
+        <a href="../index.html" class="nav-link">
+          <span class="link-text logo-text">FWML</span>
+          <svg
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fad"
+            data-icon="angle-double-right"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+            class="svg-inline--fa fa-angle-double-right fa-w-14 fa-5x"
+          >
+            <g class="fa-group">
+              <path
+                fill="currentColor"
+                d="M224 273L88.37 409a23.78 23.78 0 0 1-33.8 0L32 386.36a23.94 23.94 0 0 1 0-33.89l96.13-96.37L32 159.73a23.94 23.94 0 0 1 0-33.89l22.44-22.79a23.78 23.78 0 0 1 33.8 0L223.88 239a23.94 23.94 0 0 1 .1 34z"
+                class="fa-secondary"
+              ></path>
+              <path
+                fill="currentColor"
+                d="M415.89 273L280.34 409a23.77 23.77 0 0 1-33.79 0L224 386.26a23.94 23.94 0 0 1 0-33.89L320.11 256l-96-96.47a23.94 23.94 0 0 1 0-33.89l22.52-22.59a23.77 23.77 0 0 1 33.79 0L416 239a24 24 0 0 1-.11 34z"
+                class="fa-primary"
+              ></path>
+            </g>
+          </svg>
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a href="../index.html" class="nav-link menu-item">
+          <svg xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-home fa-w-18" role="img" aria-hidden="true" viewBox="0 0 576 512" focusable="false" data-icon="home" data-prefix="fas">
+          <path fill="currentColor" d="M 280.37 148.26 L 96 300.11 V 464 a 16 16 0 0 0 16 16 l 112.06 -0.29 a 16 16 0 0 0 15.92 -16 V 368 a 16 16 0 0 1 16 -16 h 64 a 16 16 0 0 1 16 16 v 95.64 a 16 16 0 0 0 16 16.05 L 464 480 a 16 16 0 0 0 16 -16 V 300 L 295.67 148.26 a 12.19 12.19 0 0 0 -15.3 0 Z M 571.6 251.47 L 488 182.56 V 44.05 a 12 12 0 0 0 -12 -12 h -56 a 12 12 0 0 0 -12 12 v 72.61 L 318.47 43 a 48 48 0 0 0 -61 0 L 4.34 251.47 a 12 12 0 0 0 -1.6 16.9 l 25.5 31 A 12 12 0 0 0 45.15 301 l 235.22 -193.74 a 12.19 12.19 0 0 1 15.3 0 L 530.9 301 a 12 12 0 0 0 16.9 -1.6 l 25.5 -31 a 12 12 0 0 0 -1.7 -16.93 Z" />
+          </svg>
+          <span class="link-text">Home</span>
+        </a>
+      </li>
+       
+       <li class="nav-item">
+        <a href="computer_vision/image.html" class="nav-link menu-item">
+         <svg xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-images fa-w-18" role="img" aria-hidden="true" viewBox="0 0 576 512" focusable="false" data-icon="images" data-prefix="fas"><path fill="currentColor" d="M 480 416 v 16 c 0 26.51 -21.49 48 -48 48 H 48 c -26.51 0 -48 -21.49 -48 -48 V 176 c 0 -26.51 21.49 -48 48 -48 h 16 v 208 c 0 44.112 35.888 80 80 80 h 336 Z m 96 -80 V 80 c 0 -26.51 -21.49 -48 -48 -48 H 144 c -26.51 0 -48 21.49 -48 48 v 256 c 0 26.51 21.49 48 48 48 h 384 c 26.51 0 48 -21.49 48 -48 Z M 256 128 c 0 26.51 -21.49 48 -48 48 s -48 -21.49 -48 -48 s 21.49 -48 48 -48 s 48 21.49 48 48 Z m -96 144 l 55.515 -55.515 c 4.686 -4.686 12.284 -4.686 16.971 0 L 272 256 l 135.515 -135.515 c 4.686 -4.686 12.284 -4.686 16.971 0 L 512 208 v 112 H 160 v -48 Z" /></svg>
+          <span class="link-text">Image</span>
+        </a>
+      </li>
+
+       <li class="nav-item">
+        <a href="Text/text.html" class="nav-link menu-item">
+          <svg xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-font fa-w-14" role="img" aria-hidden="true" viewBox="0 0 448 512" focusable="false" data-icon="font" data-prefix="fas"><path fill="currentColor" d="M 432 416 h -23.41 L 277.88 53.69 A 32 32 0 0 0 247.58 32 h -47.16 a 32 32 0 0 0 -30.3 21.69 L 39.41 416 H 16 a 16 16 0 0 0 -16 16 v 32 a 16 16 0 0 0 16 16 h 128 a 16 16 0 0 0 16 -16 v -32 a 16 16 0 0 0 -16 -16 h -19.58 l 23.3 -64 h 152.56 l 23.3 64 H 304 a 16 16 0 0 0 -16 16 v 32 a 16 16 0 0 0 16 16 h 128 a 16 16 0 0 0 16 -16 v -32 a 16 16 0 0 0 -16 -16 Z M 176.85 272 L 224 142.51 L 271.15 272 Z" /></svg>
+          <span class="link-text">Text</span>
+        </a>
+      </li>
+      
+       <li class="nav-item">
+        <a href="https://github.com/jinsel/Fun-with-Machine-Learning" class="nav-link menu-item">
+        <svg xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-github fa-w-16" role="img" aria-hidden="true" viewBox="0 0 496 512" focusable="false" data-icon="github" data-prefix="fab"><path fill="currentColor" d="M 165.9 397.4 c 0 2 -2.3 3.6 -5.2 3.6 c -3.3 0.3 -5.6 -1.3 -5.6 -3.6 c 0 -2 2.3 -3.6 5.2 -3.6 c 3 -0.3 5.6 1.3 5.6 3.6 Z m -31.1 -4.5 c -0.7 2 1.3 4.3 4.3 4.9 c 2.6 1 5.6 0 6.2 -2 s -1.3 -4.3 -4.3 -5.2 c -2.6 -0.7 -5.5 0.3 -6.2 2.3 Z m 44.2 -1.7 c -2.9 0.7 -4.9 2.6 -4.6 4.9 c 0.3 2 2.9 3.3 5.9 2.6 c 2.9 -0.7 4.9 -2.6 4.6 -4.6 c -0.3 -1.9 -3 -3.2 -5.9 -2.9 Z M 244.8 8 C 106.1 8 0 113.3 0 252 c 0 110.9 69.8 205.8 169.5 239.2 c 12.8 2.3 17.3 -5.6 17.3 -12.1 c 0 -6.2 -0.3 -40.4 -0.3 -61.4 c 0 0 -70 15 -84.7 -29.8 c 0 0 -11.4 -29.1 -27.8 -36.6 c 0 0 -22.9 -15.7 1.6 -15.4 c 0 0 24.9 2 38.6 25.8 c 21.9 38.6 58.6 27.5 72.9 20.9 c 2.3 -16 8.8 -27.1 16 -33.7 c -55.9 -6.2 -112.3 -14.3 -112.3 -110.5 c 0 -27.5 7.6 -41.3 23.6 -58.9 c -2.6 -6.5 -11.1 -33.3 2.6 -67.9 c 20.9 -6.5 69 27 69 27 c 20 -5.6 41.5 -8.5 62.8 -8.5 s 42.8 2.9 62.8 8.5 c 0 0 48.1 -33.6 69 -27 c 13.7 34.7 5.2 61.4 2.6 67.9 c 16 17.7 25.8 31.5 25.8 58.9 c 0 96.5 -58.9 104.2 -114.8 110.5 c 9.2 7.9 17 22.9 17 46.4 c 0 33.7 -0.3 75.4 -0.3 83.6 c 0 6.5 4.6 14.4 17.3 12.1 C 428.2 457.8 496 362.9 496 252 C 496 113.3 383.5 8 244.8 8 Z M 97.2 352.9 c -1.3 1 -1 3.3 0.7 5.2 c 1.6 1.6 3.9 2.3 5.2 1 c 1.3 -1 1 -3.3 -0.7 -5.2 c -1.6 -1.6 -3.9 -2.3 -5.2 -1 Z m -10.8 -8.1 c -0.7 1.3 0.3 2.9 2.3 3.9 c 1.6 1 3.6 0.7 4.3 -0.7 c 0.7 -1.3 -0.3 -2.9 -2.3 -3.9 c -2 -0.6 -3.6 -0.3 -4.3 0.7 Z m 32.4 35.6 c -1.6 1.3 -1 4.3 1.3 6.2 c 2.3 2.3 5.2 2.6 6.5 1 c 1.3 -1.3 0.7 -4.3 -1.3 -6.2 c -2.2 -2.3 -5.2 -2.6 -6.5 -1 Z m -11.4 -14.7 c -1.6 1 -1.6 3.6 0 5.9 c 1.6 2.3 4.3 3.3 5.6 2.3 c 1.6 -1.3 1.6 -3.9 0 -6.2 c -1.4 -2.3 -4 -3.3 -5.6 -2 Z" /></svg>
+          <span class="link-text">Github</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 
    <h1 class="fancy">Text</h1>
    <div class="contain">
