--- a/Sound/sounds.html
+++ b/Sound/sounds.html
@@ -67,7 +67,7 @@
       </li>
       
        <li class="nav-item">
-        <a href="Resources/resources.html" class="nav-link menu-item">
+        <a href="../Resources/resources.html" class="nav-link menu-item">
           <svg xmlns="http://www.w3.org/2000/svg" class="svg-inline--fa fa-book fa-w-14" role="img" aria-hidden="true" viewBox="0 0 448 512" focusable="false" data-icon="book" data-prefix="fas"><path fill="currentColor" d="M 448 360 V 24 c 0 -13.3 -10.7 -24 -24 -24 H 96 C 43 0 0 43 0 96 v 320 c 0 53 43 96 96 96 h 328 c 13.3 0 24 -10.7 24 -24 v -16 c 0 -7.5 -3.5 -14.3 -8.9 -18.7 c -4.2 -15.4 -4.2 -59.3 0 -74.7 c 5.4 -4.3 8.9 -11.1 8.9 -18.6 Z M 128 134 c 0 -3.3 2.7 -6 6 -6 h 212 c 3.3 0 6 2.7 6 6 v 20 c 0 3.3 -2.7 6 -6 6 H 134 c -3.3 0 -6 -2.7 -6 -6 v -20 Z m 0 64 c 0 -3.3 2.7 -6 6 -6 h 212 c 3.3 0 6 2.7 6 6 v 20 c 0 3.3 -2.7 6 -6 6 H 134 c -3.3 0 -6 -2.7 -6 -6 v -20 Z m 253.4 250 H 96 c -17.7 0 -32 -14.3 -32 -32 c 0 -17.6 14.4 -32 32 -32 h 285.4 c -1.9 17.1 -1.9 46.9 0 64 Z" /></svg>
           <span class="link-text">Resources</span>
         </a>
