--- a/computer_vision/image_classifier/image.html
+++ b/computer_vision/image_classifier/image.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>What you see 🐱‍🚀</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="https://unpkg.com/ml5@0.5.0/dist/ml5.min.js"></script>
+  <title>What you see 🐱‍🚀</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
+  <script src="https://unpkg.com/ml5@0.5.0/dist/ml5.min.js"></script>
 
-    <link
-      rel="stylesheet"
-      media="screen"
-      href="https://fontlibrary.org/face/press-start-2p"
-      type="text/css"
-    />
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/press-start-2p" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <meta charset="utf-8" />
+</head>
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <meta charset="utf-8" />
-  </head>
+<body>
+  <h1>What you see 🐱‍🚀</h1>
+  <div class="card">
+  </div>
+  <script src="sketch.js"></script>
 
-  <body>
-    <h1>What you see 🐱‍🚀</h1>
+</body>
 
-    <div class="card" id="label_model">
-      <!-- <p id="label_text"></p> -->
-    </div>
-    <script src="sketch.js"></script>
-  </body>
 </html>
-
-<!DOCTYPE html>
