updating the classifier and PoseNet card

--- a/computer_vision/image.html
+++ b/computer_vision/image.html
@@ -119,9 +119,7 @@
               <a href="./image_classifier/image.html" target="_blank">Image Classifier</a>
             </h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse
-              laudantium harum magnam accusantium blanditiis, tenetur
-              repudiandae consequatur quam itaque debitis!
+              Image Classifier is the way to classify the differnt object in the real world. In this I just upload my own dataset for classification {dog, mobile, book, person and bottle}. It's a simple but the application is so huge this day.
             </p>
           </div>
         </div>
@@ -136,9 +134,7 @@
               <a href="./posenet/posenet.html">Pose Net</a>
             </h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse
-              laudantium harum magnam accusantium blanditiis, tenetur
-              repudiandae consequatur quam itaque debitis!
+              Pose-Net is the way to find the Body structure, and this days its very much easy to detect the body language.
             </p>
           </div>
         </div>
