--- a/computer_vision/image.html
+++ b/computer_vision/image.html
@@ -119,8 +119,7 @@
               <a href="./image_classifier/image.html" target="_blank">Image Classifier</a>
             </h2>
             <p>
-              Image Classifier is the way to classify the differnt object in the real world. In this I just upload my own dataset for classification {dog, mobile, book, person and bottle}. It's a simple but the application is so huge this day.
-            </p>
+              Image Classifier is the way to classify the differnt object in the real world. In this I just upload my own dataset for classification {dog, mobile, book, person and bottle}.
           </div>
         </div>
       </div>
