--- a/Sound/sounds.html
+++ b/Sound/sounds.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>FWSound</title>
+  <title>FWSound 🔊</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style/sounds.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lykmapipo/themify-icons@0.1.2/css/themify-icons.css">
@@ -94,13 +94,8 @@
 
   <h1 class="fancy">Sound</h1>
   <div class="contain">
-    <p>Machine learning is an application of artificial intelligence (AI) that provides systems the ability to
-      automatically learn and improve from experience without being explicitly programmed. Machine learning focuses on
-      the development of computer programs that can access data and use it learn for themselves.</p>
-    <p>The process of learning begins with observations or data, such as examples, direct experience, or instruction, in
-      order to look for patterns in data and make better decisions in the future based on the examples that we provide.
-      The primary aim is to allow the computers learn automatically without human intervention or assistance and adjust
-      actions accordingly.</p>
+    <p>While much of the literature and buzz on deep learning concerns computer vision and natural language processing(NLP), audio analysis — a field that includes automatic speech recognition(ASR), digital signal processing, and music classification, tagging, and generation — is a growing subdomain of deep learning applications. Some of the most popular and widespread machine learning systems, virtual assistants Alexa, Siri, and Google Home, are largely products built atop models that can extract information from audio signals.</p>
+    <p>Audio data analysis is about analyzing and understanding audio signals captured by digital devices, with numerous applications in the enterprise, healthcare, productivity, and smart cities. Applications include customer satisfaction analysis from customer support calls, media content analysis and retrieval, medical diagnostic aids and patient monitoring, assistive technologies for people with hearing impairments, and audio analysis for public safety.</p>
     <div class="btn"><a href="#">Read More</a></div>
   </div>
 
@@ -111,9 +106,8 @@
           <div class="card-image card-1">
           </div>
           <div class="card-text card-1">
-            <h2> <a href="Sound_detection/index.html">Sound Game</a> </h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse laudantium harum magnam accusantium
-              blanditiis, tenetur repudiandae consequatur quam itaque debitis!</p>
+            <h2> <a href="Sound_detection/index.html" target="_blank">Sound Detection </a> </h2>
+            <p>My model allows you to classify audio. With the right pre-trained models, you can detect whether a certain noise was made (e.g. a clapping sound or a whistle) or a certain word was said (e.g Up, Down)</p>
           </div>
         </div>
       </div><!-- / service -->
@@ -124,8 +118,7 @@
           </div>
           <div class="card-text card-2">
             <h2>Pitch Detection</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse laudantium harum magnam accusantium
-              blanditiis, tenetur repudiandae consequatur quam itaque debitis!</p>
+            <p>A pitch detection algorithm is a way of estimating the pitch or freq of an audio signal. This method allows to use a pre-trained machine learning pitch detection model to estimate the pitch of sound file!</p>
           </div>
         </div>
       </div><!-- / service -->
