--- a/Text/text.html
+++ b/Text/text.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FWSound</title>
+    <title>FWText</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/text.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lykmapipo/themify-icons@0.1.2/css/themify-icons.css">
@@ -84,8 +84,8 @@
 
    <h1 class="fancy">Text</h1>
    <div class="contain">
-       <p>Machine learning is an application of artificial intelligence (AI) that provides systems the ability to automatically learn and improve from experience without being explicitly programmed. Machine learning focuses on the development of computer programs that can access data and use it learn for themselves.</p>
-       <p>The process of learning begins with observations or data, such as examples, direct experience, or instruction, in order to look for patterns in data and make better decisions in the future based on the examples that we provide. The primary aim is to allow the computers learn automatically without human intervention or assistance and adjust actions accordingly.</p>
+       <p>Machine learning (ML) for natural language processing (NLP) and text analytics involves using machine learning algorithms and “narrow” artificial intelligence (AI) to understand the meaning of text documents. These documents can be just about anything that contains text: social media comments, online reviews, survey responses, even financial, medical, legal and regulatory documents. In essence, the role of machine learning and AI in natural language processing and text analytics is to improve, accelerate and automate the underlying text analytics functions and NLP features that turn this unstructured text into useable data and insights.</p>
+       <p><h2>Below are some examples of such applications.</h2></p>
        <div class="btn"><a href="#">Read More</a></div>
    </div>
    
@@ -96,8 +96,8 @@
            <div class="card-image card-1">
            </div>
            <div class="card-text card-1">
-               <h2>Sentiment</h2>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse laudantium harum magnam accusantium blanditiis, tenetur repudiandae consequatur quam itaque debitis!</p>
+               <h2> <a href="./Sentiment/sentiment.html" target="_blank">Sentiment</a> </h2>
+               <p>Sentiment Analysis is the most common text classification tool that analyses an incoming message and tells whether the underlying sentiment is positive, negative our neutral.</p>
            </div>
        </div>
        </div><!-- / service -->
@@ -107,8 +107,8 @@
            <div class="card-image card-2">
            </div>
            <div class="card-text card-2">
-               <h2>Word2Vec</h2>
-               <p>Word2vec is a group of related models that are used to produce word embeddings. This method allows you to perform vector operations on a given set of input vectors.</p>
+               <h2><a href="./Word2Vec/word2vec.html" target="_blank"> Word2Vec</a></h2>
+               <p>Word2vec works great for processing bodies of text. It represents words as vectors of numbers, and the distance between two word vectors determines how similar the words are..</p>
            </div>
        </div>
        </div><!-- / service -->
